feat: create car model
