# car/openapi.yaml
@@ -6,6 +6,30 @@ info:
     title: Car API
     version: 0.0.1
 paths:
+    /car:
+        post:
+            tags:
+                - Car
+            operationId: Car_CreateCar
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateCarRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateCarReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /car/helloworld/{name}:
         get:
             tags:
@@ -72,6 +96,19 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        CreateCarReply:
+            type: object
+            properties:
+                car_id:
+                    type: integer
+                    format: int64
+        CreateCarRequest:
+            type: object
+            properties:
+                carName:
+                    type: string
+                carModel:
+                    type: string
         GoogleProtobufAny:
             type: object
             properties:
